--- a/src/app/pages/juegos/preguntados/preguntados.component.html
+++ b/src/app/pages/juegos/preguntados/preguntados.component.html
@@ -1,1 +1,20 @@
-<p>preguntados works!</p>
+<div class="container">
+    <div class="container-personaje">
+        <img src={{imagen}} alt="character" height="200">
+        <p class="texto">{{personaje}}</p>
+        <p class="texto">{{intentos}}/3</p>
+    </div>
+    <div class="container-opciones">
+        <p *ngIf="juegoActivado" class="texto">¿De que casa es este personaje?</p>
+        <p *ngIf="!juegoActivado" class="texto-juegoTerminado">Se han agotado tus intentos. ¡Puntos acumulados: {{ puntos }}!</p>
+        <div *ngIf="juegoActivado" class="opciones">
+            <button class="btn-opcion" (click)="verificarRespuesta('Gryffindor')">Gryffindor</button>
+            <button class="btn-opcion" (click)="verificarRespuesta('Slytherin')">Slytherin</button>
+            <button class="btn-opcion" (click)="verificarRespuesta('Hufflepuff')">Hufflepuff</button>
+            <button class="btn-opcion" (click)="verificarRespuesta('Ravenclaw')">Ravenclaw</button>
+        </div>
+        <div *ngIf="!juegoActivado">
+            <button class="btn-reiniciar" (click)="reiniciarJuego()">Reiniciar Juego</button>
+        </div>
+    </div>
+</div>
