terminado mi juego

--- a/src/app/pages/juegos/home-juegos/home-juegos.component.html
+++ b/src/app/pages/juegos/home-juegos/home-juegos.component.html
@@ -10,7 +10,7 @@
               ¡Prepárate para la adrenalina y la emoción de este clásico juego!
               Que consiste en adivinar la palabra, por cada intento fallido 
               se va completando el ahorcado, asi llevando al personaje a su inmidente 
-              muerte y tu perderas el juego.
+              muerte.
             </p>
             <a routerLink="ahorcado" class="btn btn-primary btn-juego swing">JUGAR</a>
           </div>
@@ -22,7 +22,7 @@
           <img src="../../../../assets/miniatura-mayormenor.jpg" class="card-img-top" alt="imagen-de-mayormenor"/>
           <div class="card-body">
             <p class="card-text">
-              ¡Pon a prueba tu intuición para desafiar al azar! Adivina si la siguiente carta será mayor, menor que la carta actual, solo tienes 5 intentos. 
+              ¡Pon a prueba tu intuición para desafiar al azar! Adivina si la siguiente carta será mayor o menor que la carta actual, solo tienes 5 intentos. 
             </p>
             <a routerLink="mayor-menor" class="btn btn-primary btn-juego swing">JUGAR</a>
           </div>
@@ -31,11 +31,10 @@
       <div class="col">
         <div class="card">
           <h5 class="card-title">Preguntados</h5>
-          <img src="../../../../assets/miniatura-preguntados.png" class="card-img-top" alt="iamgen-de-preguntados"/>
+          <img src="../../../../assets/miniatura-preguntados2.png" class="card-img-top" alt="iamgen-de-preguntados"/>
           <div class="card-body">
             <p class="card-text">
-              ¿Te crees tener conocimiento de las banderas de los paises? El juego clasico de Preguntados consiste en adivinar el pais a base de su bandera. 
-              Si consigues 4 puntos, ganaras el juego.
+              ¡Elige sabiamente y descubre a qué casa pertenece cada personaje en el mágico mundo de Hogwarts!
             </p>
             <a routerLink="preguntados" class="btn btn-primary btn-center swing">JUGAR</a>
           </div>
@@ -43,15 +42,15 @@
       </div>
       <div class="col">
         <div class="card">
-          <h5 class="card-title">Puntos Locos</h5>
+          <h5 class="card-title">Frenesi de Esferas</h5>
           <img src="../../../../assets/img4.jpg" class="card-img-top" alt="imagen-de-puntos-locos"/>
           <div class="card-body">
             <p class="card-text">
-             Tienes 25 segundos para llenar el rectángulo de círculos. Para ello debes pasar el mouse por 
-             toda el area. El objetivo es hacerlo lo más rápido posible; si se acaba el tiempo y no has llenado 
-             el rectángulo, perderás. ¡Mucha suerte!
+             Desafia tu destreza y velocidad para poder completar a tiempo el rectángulo
+             antes de que el tiempo se agote. ¡Prepárate para una carrera contra el reloj mientras te sumerges en la acción 
+             frenética!.
             </p>
-            <a routerLink="aventuramatematica" class="btn btn-primary btn-juego swing">JUGAR</a>
+            <a routerLink="frenesi-de-esferas" class="btn btn-primary btn-juego swing">JUGAR</a>
           </div>
         </div>
       </div>
