--- a/src/app/features/nav-var/nav-var.component.html
+++ b/src/app/features/nav-var/nav-var.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md fixed-top">
   <div class="container">
-    <a class="navbar-brand">Logo</a>
+    <a class="navbar-brand"><img src="../../../assets/logo_2.gif" class="img-logo"></a>
     <div class="offcanvas offcanvas-end" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
       <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
