--- a/src/app/pages/juegos/home-juegos/home-juegos.component.html
+++ b/src/app/pages/juegos/home-juegos/home-juegos.component.html
@@ -31,7 +31,7 @@
       <div class="col">
         <div class="card">
           <h5 class="card-title">Preguntados</h5>
-          <img src="../../../../assets/miniatura-preguntados2.png" class="card-img-top" alt="iamgen-de-preguntados"/>
+          <img src="../../../../assets/miniatura-preguntados.png" class="card-img-top" alt="imagen-de-preguntados"/>
           <div class="card-body">
             <p class="card-text">
               ¡Elige sabiamente y descubre a qué casa pertenece cada personaje en el mágico mundo de Hogwarts!
