--- a/src/app/features/nav-var/nav-var.component.scss
+++ b/src/app/features/nav-var/nav-var.component.scss
@@ -1,14 +1,18 @@
 .container{
-    margin-left: 10px;
+    margin-left: 5px;
 }
 
 .navbar{
     background-color: aliceblue;
-    height: 60px;
+    height: 65px;
     margin: 20px;
     border-radius: 16px;
     padding: 0.5rem;
     box-shadow: 0px 0px 16px rgb(4, 16, 36), 0px 0px 16px rgb(5, 58, 149);
+}
+
+.img-logo{
+    width: 250px;
 }
 
 .button-custom{
