--- a/src/app/pages/juegos/ahorcado/ahorcado.component.scss
+++ b/src/app/pages/juegos/ahorcado/ahorcado.component.scss
@@ -29,16 +29,6 @@
     font-style: normal;
 }
 
-.titulo-ahorcado {
-    text-align: center;
-    color: #bc6c25;
-    font-weight: bold;
-    font-size: 50px;
-    margin: 0 auto;
-    padding: 5px 15px;
-    margin-bottom: 1rem;
-}
-
 .palabra-adivinar {
     text-align: center;
     color: white;
@@ -114,7 +104,7 @@ p {
     cursor: pointer;
     outline: none;
     display: block;
-    margin: 0 auto 0.5rem auto;
+    margin: 1rem auto 0.5rem auto;
 }
 
 .btn-reiniciar:hover {
