Estilizo quien-soy

--- a/src/app/pages/quien-soy/quien-soy.component.html
+++ b/src/app/pages/quien-soy/quien-soy.component.html
@@ -1,14 +1,24 @@
-<section>
-    <div class="container">
-        <div class="container-biografia">
-            <h1>Hola, soy <span>Laura Colque</span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga debitis
-                distinctio vel pariatur deleniti, illum voluptatum minus quasi
-                repellendus quidem necessitatibus rerum?
-            </p>
-        </div>    
-        <div class="img-custom">
-            <img src="../../../assets/perfil_1.jpg" />
-        </div>
+<section class="container-imagen">
+  <div class="container">
+    <div class="container-biografia didact-gothic-regular">
+      <h1>Hola, soy <span>Laura Colque</span></h1>
+      <p>
+        Estudiante de la Tecnicatura Universitaria en Programación en la
+        Universidad Tecnológica Nacional de Avellaneda.
+      </p>
+      <h3>Juego Propio</h3>
+      <p>
+        <strong>Frenesí de Esferas</strong> es un juego emocionante en el que el
+        jugador debe completar el área del rectángulo lo más rápido posible
+        antes de que se acabe el tiempo. <br /><strong>¿Cómo se juega?</strong>
+        Simplemente pasa el cursor sobre el área para comenzar. A medida que
+        deslices el cursor, irán apareciendo iconos. Si logras completar toda el
+        área del rectángulo, ¡habrás ganado! De lo contrario, perderás y se te
+        informará cuántas esferas faltaron por completar.
+      </p>
     </div>
+    <div class="img-custom">
+      <img src="../../../assets/perfil_1.jpg" />
+    </div>
+  </div>
 </section>
