--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,27 +1,29 @@
-<div class="container">
-    <div class="container-form">
-        <form class="auth-form" [formGroup]="loginFormulario">
-            <div class="input-box mb-3 row">
-                <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
-                <div class="col-sm-10">
-                    <input type="email" class="form-control" id="inputEmail" placeholder="Ingrese su email" formControlName="email" autocomplete="email">
+<section class="container-imagen">
+    <div class="container">
+        <form [formGroup]="loginFormulario">
+                <div class="input-box">
+                    <input type="email" class="form-control" id="inputEmail" placeholder="" formControlName="email" autocomplete="email">
+                    <label for="inputEmail">Email</label>
+                    <i></i>
                 </div>
                 <div class="validators" *ngIf="loginFormulario.controls['email'].errors && loginFormulario.controls['email'].touched">
                     <div *ngIf="loginFormulario.controls['email'].errors['required']">Error, ingrese el email.</div>
                     <div *ngIf="loginFormulario.controls['email'].errors['pattern']">Erro, ingrese un email válido.</div>
                 </div>
-            </div>
-            <div class="input-box mb-3 row">
-                <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword" formControlName="password" placeholder="Ingrese su contraseña" autocomplete="password">
+                <div class="input-box">
+                    <input type="password" class="form-control" id="inputPassword" formControlName="password" placeholder="" autocomplete="password">
+                    <label for="inputPassword">Password</label>
+                    <i></i>
                 </div>
                 <div class="validators" *ngIf="loginFormulario.controls['password'].errors && loginFormulario.controls['password'].touched">
                     <div *ngIf="loginFormulario.controls['password'].errors['required']">Error, ingrese la contraseña.</div>
                     <div *ngIf="loginFormulario.controls['password'].errors['maxlength']">Solo se permite hasta 10 caracteres.</div>
                 </div>
+            <div class="links">
+                <a>¿No tenes cuenta? Que estas esperando Registrate</a>
             </div>
-            <button (click)="inicarSesion()" [disabled]="loginFormulario.invalid">Iniciar Sesion</button>
+            <button class="btn-login" (click)="inicarSesion()" [disabled]="loginFormulario.invalid">Iniciar Sesión</button>
         </form>
     </div>
-</div>
+</section>
+
