--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,22 +1,153 @@
-.container{
-    width: 500px;
-    height: 500px;
+.container-imagen {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background-image: url("../../../assets/fobo.png");
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    // border: 2px solid rgb(242, 174, 239, .8);
-    // border-radius: 20px;
-    // background: transparent;
-    // backdrop-filter: blur(20px);
 }
 
-.container-form{
-    margin-top: 50%;
+.container {
+    position: relative;
+    height: 450px;
+    width: 420px;
+    background-color: antiquewhite;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.container::before{
+    content: '';
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 380px;
+    height: 420px;
+    background: linear-gradient(0deg, transparent, transparent, #45f3ff, #45f3ff, #45f3ff);
+    z-index: 1;
+    transform-origin: bottom right;
+    animation: animate 6s linear infinite;
+}
+
+.container::after{
+    content: '';
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 380px;
+    height: 420px;
+    background: linear-gradient(0deg, transparent, transparent, #45f3ff, #45f3ff, #45f3ff);
+    z-index: 1;
+    transform-origin: bottom right;
+    animation: animate 6s linear infinite;
+    animation-delay: -3s;
+}
+
+@keyframes animate {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+.container form {
+    position: absolute;
+    inset: 4px;
+    background-color: rgb(188, 188, 35);
+    padding: 50px 40px;
+    border-radius: 8px;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+}
+
+.container form .input-box {
+    position: relative;
+    width: 300px;
+    margin-top: 25px;
+}
+
+.container form .input-box input {
+    position: relative;
+    width: 100%;
+    padding: 20px 10px 10px;
+    background: transparent;
+    outline: none;
+    border: none;
+    box-shadow: none;
+    color: black;
+    font-size: 1rem;
+    letter-spacing: 0.05em;
+    transition: 0.5s;
+    z-index: 10;
+}
+
+.container form .input-box label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 20px 0px 10px;
+    pointer-events: none;
+    color: burlywood;
+    font-size: 1em;
+    letter-spacing: 0.05em;
+    transition: 0.5s;
+}
+
+.container form .input-box input:focus ~ label,
+.container form .input-box input:valid ~ label{
+    color: azure;
+    font-size: 0.75em;
+    transform: translateY(-34px);
+}
+
+ .container form .input-box i{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background: #fff;
+    border-radius: 4px;
+    overflow: hidden;
+    transition: 0.5s;
+    pointer-events: none;
+}
+
+.container form .input-box input:focus ~ i {
+    height: 44px;
+}
+
+.container form .links a{
+    margin: 10px 0;
+    font-size: 0.75em;
+    color: antiquewhite;
+    text-decoration: none;
+}
+
+.container form .links a:hover{
+    color: aquamarine;
 }
 
 .validators {
     color: red;
     font-size: 13px;
     text-align: center;
+}
+
+.btn-login{
+    border: none;
+    outline: none;
+    padding: 9px 25px;
+    background: chocolate;
+    cursor: pointer;
+    font-size: 0.9em;
+    border-radius: 4px;
+    font-weight: 600;
+    margin-top: 35px;
 }
