--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -11,143 +11,93 @@
 }
 
 .container {
-    position: relative;
-    height: 450px;
-    width: 420px;
-    background-color: antiquewhite;
-    border-radius: 8px;
-    overflow: hidden;
+    height: 480px;
+    width: 400px;
+    padding: 40px;
+    border-radius: 20px;
+    border: 5px solid #8E75FB;
+    box-shadow: -5px -5px 15px rgba(31, 38, 135, 0.1),
+    5px 5px 15px rgb(0,0,0,0.35),
+    inset -5px -5px 15px rgb(31, 38, 135, 0.1),
+    inset 5px 5px 15px rgb(0, 0, 0, 0.35); 
+    backdrop-filter: blur(15px);
+    background: rgba(101, 113, 255, 0.292); 
 }
 
-.container::before{
-    content: '';
-    position: absolute;
-    top: -50%;
-    left: -50%;
-    width: 380px;
-    height: 420px;
-    background: linear-gradient(0deg, transparent, transparent, #45f3ff, #45f3ff, #45f3ff);
-    z-index: 1;
-    transform-origin: bottom right;
-    animation: animate 6s linear infinite;
-}
-
-.container::after{
-    content: '';
-    position: absolute;
-    top: -50%;
-    left: -50%;
-    width: 380px;
-    height: 420px;
-    background: linear-gradient(0deg, transparent, transparent, #45f3ff, #45f3ff, #45f3ff);
-    z-index: 1;
-    transform-origin: bottom right;
-    animation: animate 6s linear infinite;
-    animation-delay: -3s;
-}
-
-@keyframes animate {
-    0%{
-        transform: rotate(0deg);
-    }
-    100%{
-        transform: rotate(360deg);
-    }
-}
-
-.container form {
-    position: absolute;
-    inset: 4px;
-    background-color: rgb(188, 188, 35);
-    padding: 50px 40px;
-    border-radius: 8px;
-    z-index: 2;
+.container .container-form {
+    height: 400px;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
+    gap: 2px;
 }
-
-.container form .input-box {
+.container .container-form .input-box{
     position: relative;
-    width: 300px;
-    margin-top: 25px;
 }
 
-.container form .input-box input {
+#inputPassword{
+ margin-top: 8px;
+}
+
+.input-box input{
     position: relative;
-    width: 100%;
-    padding: 20px 10px 10px;
-    background: transparent;
-    outline: none;
-    border: none;
-    box-shadow: none;
-    color: black;
-    font-size: 1rem;
-    letter-spacing: 0.05em;
-    transition: 0.5s;
-    z-index: 10;
+    border-radius: 15px;
 }
 
-.container form .input-box label {
+.input-box .icon {
     position: absolute;
-    top: 0;
-    left: 0;
-    padding: 20px 0px 10px;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
     pointer-events: none;
-    color: burlywood;
-    font-size: 1em;
-    letter-spacing: 0.05em;
-    transition: 0.5s;
+    color: coral;
 }
 
-.container form .input-box input:focus ~ label,
-.container form .input-box input:valid ~ label{
-    color: azure;
-    font-size: 0.75em;
-    transform: translateY(-34px);
-}
-
- .container form .input-box i{
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 2px;
-    background: #fff;
-    border-radius: 4px;
-    overflow: hidden;
-    transition: 0.5s;
-    pointer-events: none;
-}
-
-.container form .input-box input:focus ~ i {
-    height: 44px;
-}
-
-.container form .links a{
-    margin: 10px 0;
-    font-size: 0.75em;
-    color: antiquewhite;
-    text-decoration: none;
-}
-
-.container form .links a:hover{
-    color: aquamarine;
-}
-
-.validators {
-    color: red;
-    font-size: 13px;
-    text-align: center;
+.form-control {
+    padding-right: 25px; /* Aumenta el padding para dar espacio al ícono */
 }
 
 .btn-login{
+    margin-top: 40px;
+    width: 100%;
+    height: 40px;
+    border-radius: 40px;
+    background: #FFAEC9;
     border: none;
     outline: none;
-    padding: 9px 25px;
-    background: chocolate;
     cursor: pointer;
     font-size: 0.9em;
-    border-radius: 4px;
     font-weight: 600;
-    margin-top: 35px;
+}
+
+.btn-login:valid{
+    color: #fff;
+}
+
+.link-registro{
+    margin: 25px 0 10px;
+    font-size: .9em;
+    color: antiquewhite;
+    text-align: center;
+    cursor: pointer;
+}
+
+.link-registro p a{
+    text-decoration: none;
+    color: azure;
+    font-weight: 600;
+}
+
+.link-registro p a:hover{
+    text-decoration: underline;
+    color: #FFBAE5;
+}
+
+.validators {
+    font-weight: 600;
+    color: red;
+    font-size: 15px;
+    text-align: center;
+    margin-top: -5px;
 }
