--- a/src/app/auth/registro/registro.component.html
+++ b/src/app/auth/registro/registro.component.html
@@ -1,37 +1,36 @@
-<div class="container">
-    <div class="container-form">
-        <form class="auth-form" [formGroup]="registroFormulario">
-            <div class="input-box mb-3 row">
-                <label for="inputUsername" class="col-sm-2 col-form-label">Usuario</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="inputUsername" placeholder="Ingrese su nombre de usuario" formControlName="username">
-                </div>
-                <div class="validators" *ngIf="registroFormulario.controls['username'].errors && registroFormulario.controls['username'].touched">
-                    <div *ngIf="registroFormulario.controls['username'].errors['required']">Error, ingrese un nombre de usuario.</div>
-                    <div *ngIf="registroFormulario.controls['username'].errors['maxlength']">Solo se permite hasta 10 caracteres.</div>
-                </div>
-            </div>
-            <div class="input-box mb-3 row">
-                <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
-                <div class="col-sm-10">
-                    <input type="email" class="form-control" id="inputEmail" placeholder="Ingrese su email" formControlName="email" autocomplete="email">
-                </div>
-                <div class="validators" *ngIf="registroFormulario.controls['email'].errors && registroFormulario.controls['email'].touched">
-                    <div *ngIf="registroFormulario.controls['email'].errors['required']">Error, ingrese el email.</div>
-                    <div *ngIf="registroFormulario.controls['email'].errors['pattern']">Erro, ingrese un email válido.</div>
-                </div>
-            </div>
-            <div class="input-box mb-3 row">
-                <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword" formControlName="password" placeholder="Ingrese su contraseña" autocomplete="password">
-                </div>
-                <div class="validators" *ngIf="registroFormulario.controls['password'].errors && registroFormulario.controls['password'].touched">
-                    <div *ngIf="registroFormulario.controls['password'].errors['required']">Error, ingrese la contraseña.</div>
-                    <div *ngIf="registroFormulario.controls['password'].errors['maxlength']">Solo se permite hasta 10 caracteres.</div>
-                </div>
-            </div>
-            <button (click)="registro()" [disabled]="registroFormulario.invalid">Registrarse</button>
-        </form>
+<section class="container-imagen">
+    <div class="container">
+        <div class="container-form">
+            <form [formGroup]="registroFormulario">
+                    <div class="input-box form-floating mb-3">
+                        <input type="text" class="form-control" id="inputUsername" placeholder="Ingrese su nombre de usuario" formControlName="username">
+                        <i class="fa-regular fa-user icon"></i>
+                        <label for="inputUsername" class="col-sm-2 col-form-label">Usuario</label>
+                    </div>
+                    <div class="validators" *ngIf="registroFormulario.controls['username'].errors && registroFormulario.controls['username'].touched">
+                        <div *ngIf="registroFormulario.controls['username'].errors['required']">Error, ingrese un nombre de usuario.</div>
+                        <div *ngIf="registroFormulario.controls['username'].errors['maxlength']">Solo se permite hasta 10 caracteres.</div>
+                    </div>
+                    <div class="input-box form-floating mb-3">
+                        <input type="email" class="form-control" id="inputEmail" placeholder="Ingrese su email" formControlName="email" autocomplete="email">
+                        <i class="fa-regular fa-envelope icon"></i>
+                        <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
+                    </div>
+                    <div class="validators" *ngIf="registroFormulario.controls['email'].errors && registroFormulario.controls['email'].touched">
+                        <div *ngIf="registroFormulario.controls['email'].errors['required']">Error, ingrese el email.</div>
+                        <div *ngIf="registroFormulario.controls['email'].errors['pattern']">Erro, ingrese un email válido.</div>
+                    </div>
+                    <div class="input-box form-floating mb-3">
+                        <input type="password" class="form-control" id="inputPassword" formControlName="password" placeholder="Ingrese su contraseña" autocomplete="password">
+                        <i class="fa-solid fa-lock icon"></i>
+                        <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+                    </div>
+                    <div class="validators" *ngIf="registroFormulario.controls['password'].errors && registroFormulario.controls['password'].touched">
+                        <div *ngIf="registroFormulario.controls['password'].errors['required']">Error, ingrese la contraseña.</div>
+                        <div *ngIf="registroFormulario.controls['password'].errors['maxlength']">Solo se permite hasta 10 caracteres.</div>
+                    </div>
+                <button class="btn-registro" (click)="registro()" [disabled]="registroFormulario.invalid">Registrarse</button>
+            </form>
+        </div>
     </div>
-</div>
+</section>
