--- a/src/app/auth/registro/registro.component.scss
+++ b/src/app/auth/registro/registro.component.scss
@@ -1,22 +1,103 @@
-.container {
-    width: 500px;
-    height: 500px;
+.container-imagen {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background-image: url("../../../assets/fobo.png");
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    // border: 2px solid rgb(242, 174, 239, .8);
-    // border-radius: 20px;
-    // background: transparent;
-    // backdrop-filter: blur(20px);
 }
 
-.container-form {
-    margin-top: 50%;
+.container {
+    height: 480px;
+    width: 400px;
+    padding: 40px;
+    border-radius: 20px;
+    border: 5px solid #8E75FB;
+    box-shadow: -5px -5px 15px rgba(31, 38, 135, 0.1),
+    5px 5px 15px rgb(0,0,0,0.35),
+    inset -5px -5px 15px rgb(31, 38, 135, 0.1),
+    inset 5px 5px 15px rgb(0, 0, 0, 0.35); 
+    backdrop-filter: blur(15px);
+    background: rgba(101, 113, 255, 0.292); 
 }
+
+.container .container-form {
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 2px;
+}
+.container .container-form .input-box{
+    position: relative;
+}
+
+#inputPassword{
+ margin-top: 8px;
+}
+
+.input-box input{
+    position: relative;
+    border-radius: 15px;
+}
+
+.input-box .btn-registro{
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    pointer-events: none;
+    color: coral;
+}
+
+.form-control {
+    padding-right: 25px; /* Aumenta el padding para dar espacio al ícono */
+}
+
+.btn-registro {
+    margin-top: 40px;
+    width: 100%;
+    height: 40px;
+    border-radius: 40px;
+    background: #FFAEC9;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 0.9em;
+    font-weight: 600;
+}
+
+.btn-registro:valid{
+    color: #fff;
+}
+
+/* .link-registro{
+    margin: 25px 0 10px;
+    font-size: .9em;
+    color: antiquewhite;
+    text-align: center;
+    cursor: pointer;
+}
+
+.link-registro p a{
+    text-decoration: none;
+    color: azure;
+    font-weight: 600;
+}
+
+.link-registro p a:hover{
+    text-decoration: underline;
+    color: #FFBAE5;
+} */
 
 .validators {
+    font-weight: 600;
     color: red;
-    font-size: 13px;
+    font-size: 15px;
     text-align: center;
+    margin-top: -5px;
 }
