--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -2,5 +2,6 @@
     background: url("../../../assets/fobo.png") no-repeat center;
     background-size: cover;
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    position: fixed;
 }
