--- a/src/app/auth/registro/registro.component.scss
+++ b/src/app/auth/registro/registro.component.scss
@@ -11,7 +11,7 @@
 }
 
 .container {
-    height: 480px;
+    height: 500px;
     width: 400px;
     padding: 40px;
     border-radius: 20px;
@@ -25,41 +25,46 @@
 }
 
 .container .container-form {
-    height: 400px;
+    height: 420px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 2px;
 }
+
 .container .container-form .input-box{
     position: relative;
 }
 
-#inputPassword{
- margin-top: 8px;
+#inputPassword, #inputEmail{
+    margin-top: 15px;
+}
+
+.input-box{
+    margin-bottom: 40px !important;
 }
 
 .input-box input{
     position: relative;
     border-radius: 15px;
+    width: 300px;
 }
 
-.input-box .btn-registro{
+.input-box .icon{
     position: absolute;
-    top: 50%;
     right: 10px;
+    top: 50%;
     transform: translateY(-50%);
-    pointer-events: none;
-    color: coral;
+    color: chocolate;
 }
 
 .form-control {
-    padding-right: 25px; /* Aumenta el padding para dar espacio al ícono */
+    padding-right: 30px; /* Aumenta el padding para dar espacio al ícono */
 }
 
 .btn-registro {
-    margin-top: 40px;
+    margin-top: 25px;
     width: 100%;
     height: 40px;
     border-radius: 40px;
@@ -75,29 +80,10 @@
     color: #fff;
 }
 
-/* .link-registro{
-    margin: 25px 0 10px;
-    font-size: .9em;
-    color: antiquewhite;
-    text-align: center;
-    cursor: pointer;
-}
-
-.link-registro p a{
-    text-decoration: none;
-    color: azure;
-    font-weight: 600;
-}
-
-.link-registro p a:hover{
-    text-decoration: underline;
-    color: #FFBAE5;
-} */
-
 .validators {
     font-weight: 600;
     color: red;
     font-size: 15px;
     text-align: center;
-    margin-top: -5px;
+    margin-top: -25px;
 }
