--- a/src/app/pages/juegos/frenesi-de-esferas/frenesi-de-esferas.component.scss
+++ b/src/app/pages/juegos/frenesi-de-esferas/frenesi-de-esferas.component.scss
@@ -15,34 +15,34 @@
     background-repeat: no-repeat;
     transition: background-color 0.5s;
     &.icon1 {
-      background-image: url("../../../../assets/icon1.png");
+      background-image: url("../../../../assets/iconos/icon1.png");
     }
     &.icon2 {
-      background-image: url("../../../../assets/icon2.png");
+      background-image: url("../../../../assets/iconos/icon2.png");
     }
     &.icon3 {
-      background-image: url("../../../../assets/icon3.png");
+      background-image: url("../../../../assets/iconos/icon3.png");
     }
     &.icon4 {
-      background-image: url("../../../../assets/icon4.png");
+      background-image: url("../../../../assets/iconos/icon4.png");
     }
     &.icon5 {
-      background-image: url("../../../../assets/icon5.png");
+      background-image: url("../../../../assets/iconos/icon5.png");
     }
     &.icon6 {
-      background-image: url("../../../../assets/icon6.png");
+      background-image: url("../../../../assets/iconos/icon6.png");
     }
     &.icon7 {
-      background-image: url("../../../../assets/icon7.png");
+      background-image: url("../../../../assets/iconos/icon7.png");
     }
     &.icon8 {
-      background-image: url("../../../../assets/icon8.png");
+      background-image: url("../../../../assets/iconos/icon8.png");
     }
     &.icon9 {
-      background-image: url("../../../../assets/icon9.png");
+      background-image: url("../../../../assets/iconos/icon9.png");
     }
     &.icon10 {
-      background-image: url("../../../../assets/icon10.png");
+      background-image: url("../../../../assets/iconos/icon10.png");
     }
   }
 }
