--- a/src/app/pages/juegos/home-juegos/home-juegos.component.html
+++ b/src/app/pages/juegos/home-juegos/home-juegos.component.html
@@ -43,7 +43,7 @@
       <div class="col">
         <div class="card">
           <h5 class="card-title">Frenesi de Esferas</h5>
-          <img src="../../../../assets/img4.jpg" class="card-img-top" alt="imagen-de-puntos-locos"/>
+          <img src="../../../../assets/miniatura-esferas.png" class="card-img-top" alt="imagen-de-puntos-locos"/>
           <div class="card-body">
             <p class="card-text">
              Desafia tu destreza y velocidad para poder completar a tiempo el rectángulo
