--- a/src/app/pages/juegos/home-juegos/home-juegos.component.scss
+++ b/src/app/pages/juegos/home-juegos/home-juegos.component.scss
@@ -5,14 +5,14 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(to top, transparent 10%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0) 95%), url('../../../../assets/fobo.png');
+    background-image: url('../../../../assets/fobo.png');
     background-position: center top;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .container {
-    margin-top: 7rem;
+    margin-top: 5rem;
 }
 
 .card-title {
@@ -23,10 +23,9 @@
 .card {
     margin-top: 3rem;
     min-height: 250px;
-    background: rgba(44, 12, 161, 0.15);
+    background: rgba(101, 113, 255, 0.292);
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(9px);
-    border: 2px solid rgba(255, 255, 255, 0.671);
+    backdrop-filter: blur(30px);
     border-radius: 1rem;
     padding: 2rem;
     color: whitesmoke;
