--- a/src/app/pages/quien-soy/quien-soy.component.scss
+++ b/src/app/pages/quien-soy/quien-soy.component.scss
@@ -7,7 +7,7 @@
     height: 100%;
     width: 100%;
     background-image: url("../../../assets/fobo.png");
-    background-repeat: no-repeat;
+    background-repeat: no-repeat center;
     background-size: cover;
 }
 
