--- a/src/app/pages/juegos/frenesi-de-esferas/frenesi-de-esferas.component.html
+++ b/src/app/pages/juegos/frenesi-de-esferas/frenesi-de-esferas.component.html
@@ -1,25 +1,28 @@
-<div class="container-mijuego">
-    <div class="d-flex container">
-        <div class="reglas-container">
-            <div class="mensajes">
-                <div class="gelatine" *ngIf="juegoActivado && !juegoDesactivado && !gano">{{ tiempo }}</div>
-                <div *ngIf="!juegoActivado && !juegoDesactivado">
-                    ¡¡Mueve el mouse dentro del rectangulo !!
+<section class="container-imagen">
+    <div class="container-mijuego">
+        <div class="d-flex container">
+            <div class="reglas-container">
+                <div class="mensajes didact-gothic-regular">
+                    <div class="gelatine" *ngIf="juegoActivado && !juegoDesactivado && !gano">{{ tiempo }}</div>
+                    <div *ngIf="!juegoActivado && !juegoDesactivado">
+                        ¡¡Mueve el mouse dentro del rectangulo !!
+                    </div>
+                    <div *ngIf="juegoActivado && juegoDesactivado && gano">
+                        ¡Muy bien, ganasteee!
+                    </div>
+                    <div *ngIf="juegoActivado && juegoDesactivado && !gano">
+                        ¡Oh no!¡te faltaron {{ reprogramar }} circulos!
+                    </div>
                 </div>
-                <div *ngIf="juegoActivado && juegoDesactivado && gano">
-                    ¡Muy bien, ganasteee!
-                </div>
-                <div *ngIf="juegoActivado && juegoDesactivado && !gano">
-                    ¡Oh no!¡te faltaron {{ reprogramar }} circulos!
+                <div *ngIf="juegoDesactivado didact-gothic-regular">
+                    <button class="pulse" (click)="reiniciarJuego()">JUGAR DE NUEVO</button>
                 </div>
             </div>
-            <div *ngIf="juegoDesactivado">
-                <button class="pulse" (click)="reiniciarJuego()">JUGAR DE NUEVO</button>
+            <div class="game-container">
+                <div #esferasRefs class="esferas" *ngFor="let dot of esferas"(mouseover)="cambioStyles(esferasRefs)"></div>
             </div>
-        </div>
-        <div class="game-container">
-            <div #esferasRefs class="esferas" *ngFor="let dot of esferas"(mouseover)="cambioStyles(esferasRefs)"></div>
         </div>
     </div>
-</div>
+</section>
+
 
