--- a/src/app/features/chat/chat.component.html
+++ b/src/app/features/chat/chat.component.html
@@ -13,7 +13,7 @@
             </p>
         </div>
         <form class="card-footer text-muted input-group">
-            <input type="text" class="form-control" placeholder="Ingrese su mensaje" [(ngModel)]="mensajeAEnviar" [ngModelOptions]="{standalone: true}"/>
+            <input type="text" class="form-control" placeholder="Ingrese su mensaje...." [(ngModel)]="mensajeAEnviar" [ngModelOptions]="{standalone: true}"/>
             <div class="input-group-append" (click)="enviarMensaje()">
                 <span class="input-group-text span-efecto" id="basic-addon2">
                     <img class="img-efecto" src="../../../assets/icon-enviar.gif" alt="icon" width="45px">
