--- a/src/app/pages/juegos/frenesi-de-esferas/frenesi-de-esferas.component.scss
+++ b/src/app/pages/juegos/frenesi-de-esferas/frenesi-de-esferas.component.scss
@@ -116,6 +116,7 @@ button {
   margin: 20px;
   width: 200px;
   transition: background-color 0.3s ease-in-out;
+  border:none;
 }
 
 button:hover {
