--- a/src/app/pages/juegos/home-juegos/home-juegos.component.scss
+++ b/src/app/pages/juegos/home-juegos/home-juegos.component.scss
@@ -54,7 +54,7 @@
     justify-content: center;
     align-items: center;
     border: none;
-    background-color: rgb(233, 118, 47);
+    background-color: #ff6d00;
     color: rgb(116, 7, 240);
 }
 
