--- a/src/app/pages/juegos/preguntados/preguntados.component.scss
+++ b/src/app/pages/juegos/preguntados/preguntados.component.scss
@@ -126,7 +126,7 @@ container-personaje {
     letter-spacing: 2.5px;
     font-weight: 500;
     color: rgb(255, 255, 255);
-    background-color: #000;
+    background-color: #712E1E;;
     border: none;
     border-radius: 45px;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.8);
